Ensures embedded video attachments don't overflow their containers

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -4197,6 +4197,7 @@ tr[id^='list_news_lists_'] textarea {
 .videocontainer video {
 	object-fit: contain;
 	background: black;
+	max-width: 100%;
 }
 
 .backtrace:not(:last-child) {
